# lain-bootleg-bootleg

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md
.github/workflows/: ci.yml
CMakeModules/: FindGLFW.cmake
scripts/: bundle.sh  extract_n_decompress.py  extract_wav.py  format_sprites.py  generate_embeds.py  lzss.c  make_game_assets.py
shaders/: scene.vs
src/: animations.c  animations.h  dressup.c  dressup.h  engine.c  engine.h  hashmap.c  index_buffer.c  index_buffer.h  input.c  input.h  kumashoot.c  kumashoot.h  main.c  menu.c  menu.h  minigame.c  minigame.h  movie.c  movie.h  quad.c  quad.h  random.c  random.h  render.c  render.h  resource_cache.c  resource_cache.h  resources.c  resources.h  scene.c  scene.h  shader.c  shader.h  sound.c  sound.h  sprite.c  sprite.h  state.c  state.h  (+19 more)
src/shaders/: scene.vs  sprite.fs  sprite.vs  text.fs  text.vs
